# compiladores

./: .Makefile.swp  .gitignore  .tarignore  CMakeLists.txt  Makefile  ast.c  ast.h  errorHandler.c  errorHandler.h  generateTarAndUpload.sh  hash.c  hash.h  in  lib.c  lib.h  main.c  makefile  parser.y  scanner.l  scannerDefinitions.c  scannerDefinitions.h  semanticError.c  semanticError.h  semantics.c  semantics.h  span.c  span.h  symbols.h  test.sh  types.c  types.h
inputs/: fatorial  in  in2  in3  inExpr
rules/: parser.y  scanner.l  yaccHeaders.h
src/: argumentParser.c  argumentParser.h  ast.c  ast.h  callsGraph.c  callsGraph.h  errorHandler.c  errorHandler.h  funcCode.c  funcCode.h  generateAssembly.c  generateAssembly.h  generateCode.c  generateCode.h  graphBlock.c  graphBlock.h  hash.c  hash.h  lib.c  lib.h  logs.c  logs.h  main.c  main.h  scannerDefinitions.c  scannerDefinitions.h  semanticError.h  semantics.c  semantics.h  span.c  span.h  symbols.c  symbols.h  tac.c  tac.h  types.c  types.h  yyltype.h
